# Matrix_Screen

./: CMakeLists.txt  README.md
cmake/: FindSDL2.cmake  FindSDL2_ttf.cmake
src/: MatrixColumn.cpp  MatrixColumn.h  main.cpp
test/: MatrixScreenTest.cpp  MatrixScreenTest.h
